--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#23272B",
     "icons": [
       {
-        "src": "./Assets/logo.png",
+        "src": "./Assets/logo-512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
