--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://www.mathflare.tk",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0"
   }
 }
