--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,6 +74,7 @@
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./src/testing.ts"
   ]
 }
