--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the go-to website for algebra and geometry",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "lite-server"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://www.mathflare.tk",
   "devDependencies": {
+    "jest": "^27.0.6",
     "lite-server": "^2.6.1"
   },
   "dependencies": {
