--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_locale": "en",
     "lang": "English",
     "start_url": "/",
-    "homepage_url": "https://www.mathflare.tk",
+    "homepage_url": "https://www.mathflare.xyz",
     "icons": [
         {
             "src": "/Assets/favicon.ico",
