--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/mathflare/mathflare/issues"
   },
-  "homepage": "https://www.mathflare.tk",
+  "homepage": "https://www.mathflare.xyz",
   "devDependencies": {
     "jest": "^27.0.6",
     "lite-server": "^2.6.1"
