--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "MathFlare",
     "short_name": "MathFlare",
     "description": "the go-to open source website for geometry and algebra. Now offering 60+ useful and advanced calculators for free!",
-    "author": "MathFlare Co. Ltd.",
+    "author": "MathFlare.xyz",
     "version": "3,6",
     "manifest_version": 1,
     "offline_enabled": false,
