--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/mathflare/mathflare.git"
   },
-  "author": "MathFlare.xyz Co. Ltd.",
+  "author": "MathFlare.xyz",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mathflare/mathflare/issues"
